# roblox-player-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.spec  pyproject.toml
docs/dev/: architecture.md  presence-reference.md  setup.md
docs/user/: configuration.md  getting-started.md  help.md
examples/: config.json  user_data.json
src/playertracker/: __init__.py  app.py  main.py
src/playertracker/actions/: __init__.py  base.py  create.py  modify.py  uninstall.py  view.py
src/playertracker/cli/: output.py  prompt.py
src/playertracker/core/: config.py  cooldown.py  service.py  session.py
src/playertracker/persistence/: paths.py  storage.py
src/playertracker/shared/: constants.py  decorators.py  messages.py  typedefs.py
src/playertracker/utils/: hardware.py  logger.py  sanitizer.py  status.py
